Somewhat fixed the overflowing issue

--- a/styles.css
+++ b/styles.css
@@ -30,20 +30,24 @@ body {
     align-items: center;
 }
 
-#display {
+#display-screen {
     height: 20%;
     width: 95%;
     margin: 10px;
     border-radius: 5px;
     background: white;
 
-    font-size: 90px;
+    font-size: 50px;
     font-family: 'Courier New', Courier, monospace;
-    
+
     display: flex;
     justify-content: flex-end;
     align-items: center;
 }
+
+#display {
+   overflow: auto; 
+}  
 
 #buttons-container {
     flex: auto;
